@@ -1,3 +1,15 @@
+2006-12-17  Eric Butler  <eric@extremeboredom.net>
+
+	* src/ephy-embed.h:
+	
+	Add search_link entry to _EphyEmbedIface
+ 
+ 	* src/ephy-embed.c:
+ 	Add ge-search-link signal
+ 
+ 	* embed/mozilla/EphyBrowser.cs: 
+ 	Fire ge-search-link signal for opensearch tags
+ 
 2006-12-17  Christian Persch  <chpe@cvs.gnome.org>
 
 	* src/ephy-history-window.c: (cmd_delete):
